WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159163
Signal that media element is prepared for inline when being stopped since script won't be able to.
https://bugs.webkit.org/show_bug.cgi?id=159163
Summary
Signal that media element is prepared for inline when being stopped since scr...
Jeremy Jones
Reported
2016-06-27 13:01:16 PDT
Signal that media element is prepared for inline when being stopped since script won't be able to.
Attachments
Patch
(1.81 KB, patch)
2016-06-27 13:07 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Patch
(3.43 KB, patch)
2016-07-06 11:20 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2016-06-27 13:01:55 PDT
rdar://problem/26844557
Jeremy Jones
Comment 2
2016-06-27 13:07:10 PDT
Created
attachment 282158
[details]
Patch
Eric Carlson
Comment 3
2016-06-27 13:27:39 PDT
Comment on
attachment 282158
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=282158&action=review
> Source/WebCore/html/HTMLMediaElement.cpp:5058 > + setPreparedForInline(true);
It would be slightly more efficient to add "if (m_preparedForInline)"
Jeremy Jones
Comment 4
2016-07-06 11:20:40 PDT
Created
attachment 282912
[details]
Patch
WebKit Commit Bot
Comment 5
2016-07-06 13:02:47 PDT
Comment on
attachment 282912
[details]
Patch Clearing flags on attachment: 282912 Committed
r202871
: <
http://trac.webkit.org/changeset/202871
>
WebKit Commit Bot
Comment 6
2016-07-06 13:02:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug