Signal that media element is prepared for inline when being stopped since script won't be able to. https://bugs.webkit.org/show_bug.cgi?id=159163 rdar://problem/26844557

Patch by Jeremy Jones <jeremyj@apple.com> on 2016-07-06
Reviewed by Jer Noble.

No new tests since this don't change behavior in the DOM. It prevents a race that could cause
fullscreen and picture in picture to fail to tear down completely.

When an element exits a fullscreen mode and is immediately removed from the DOM by the page,
its JavaScript stops running. The fullscreen code is then blocked waiting for JS to signal
that it has updated its state in preparation for inline mode. This change explicitly signals
this since JS wont be able to.

Additionally, when going from PiP back to inline, don't go through fullscreen first, when the
request comes from the DOM. This was causing the presentation mode to become confused. The
page requests inline. PiP would exit back to fullscreen and set the presentation mode to
fullscreen. Then it would exit fullscreen back to inline, but the DOM still had the wrong
presentation mode. Skipping this removes an unnecessary step in the animation and keeps the
presentation mode state consistent.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::stopWithoutDestroyingMediaPlayer):
* platform/ios/WebVideoFullscreenInterfaceAVKit.mm: Set prepared for inline.
(WebVideoFullscreenInterfaceAVKit::exitFullscreen): Return directly to inlne.

Canonical link: https://commits.webkit.org/177601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202871 268f45cc-cd09-0410-ab3c-d52691b4dbfc